--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,10 @@ dependencies = [
     "rapidfuzz>=3.14.3",
     "requests>=2.32.5",
     "sentence-transformers>=5.2.0",
+    "langchain>=0.3.0",
+    "langchain-openai>=0.2.0",
+    "langchain-qdrant>=0.2.0",
+    "langchain-huggingface>=0.1.0",
+    "langgraph>=0.2.0",
+    "python-dotenv>=1.0.0",
 ]
