--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,5 @@ dependencies = [
     "langchain-huggingface>=0.1.0",
     "langgraph>=0.2.0",
     "python-dotenv>=1.0.0",
+    "einops>=0.8.1",
 ]
