모든 법령 크롤링 및 V9 버전 생성, keyword검색 모델 변경 (대용량 JSON 파일 제외)

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ env/
 logs/
 
 # Data files (large JSON files)
+a_team/data/raw/*.json
 !A-TEAM/data/raw/.gitkeep
 
 # Qdrant local DB (Docker 사용, 대용량 파일)
