feat: 메모리 효율적인 벡터화 + MPS 지원 + 시간 추적
- MPS (Apple Silicon) GPU 가속 지원 추가
- 메모리 효율적인 JSON 스트리밍 (1GB → 50MB)
- 배치별 자동 메모리 정리
- 업로드 진행률 및 ETA 표시
- 이어서 업로드 기능
- CPU 모드 옵션 (--force-cpu)
- 병렬 처리 옵션 (--start-index, --end-index)

--- a/.gitignore
+++ b/.gitignore
@@ -46,10 +46,9 @@ env/
 logs/
 
 # Data files (large JSON files)
-!A-TEAM/data/raw/.gitkeep
-
-# Qdrant local DB (Docker 사용, 대용량 파일)
-A-TEAM/data/qdrant_db/
+a_team/data/raw/*.json
+a_team/data/processed/*.json
+!a_team/data/raw/.gitkeep
 
 # Temporary files
 *.tmp
